// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DimissKeyboard: Match snapshots 1 1`] = `
<TouchableWithoutFeedback
  onPress={[Function]}
>
  <Text>
    Random Text
  </Text>
</TouchableWithoutFeedback>
`;

exports[`DimissKeyboard: Match snapshots 2 1`] = `
<TouchableWithoutFeedback
  onPress={[Function]}
>
  <Text>
    Other Text
  </Text>
</TouchableWithoutFeedback>
`;
